--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "debug": "^4.3.4",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "joi": "^17.12.3",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongodb": "^6.5.0",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
