--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "config": "^3.3.11",
     "debug": "^4.3.4",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "helmet": "^7.1.0",
     "joi": "^17.12.3",
     "joi-objectid": "^4.0.2",
@@ -21,6 +22,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "winston": "^3.13.0",
+    "winston-mongodb": "^5.1.1"
   }
 }
