--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll",
+    "test-coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +26,8 @@
     "pug": "^3.0.2",
     "winston": "^3.13.0",
     "winston-mongodb": "^5.1.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
